# basics_of_programming_course

./: CMakeLists.txt  main.c
lab5c/: CMakeLists.txt  sorts.c  sorts.h  test_sorts.c  test_sorts.h
lab5d/: CMakeLists.txt  tasks.c  tasks.h  tasks_test.c  tasks_test.h
lab5e/: CMakeLists.txt  lab5e_test.c  lab5e_test.h  tasks.c  tasks.h
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h  test_matrix.c  test_matrix.h
libs/data_structures/vector/: test_vector.c  test_vector.h  vector.c  vector.h
libs/generating/: CMakeLists.txt  generatingFunc.c  generatingFunc.h
string/tasks/: CMakeLists.txt  string_.c  string_.h  string_test.c  string_test.h
